[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/ui/mainMenu/ModeSelect.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/agane/Agane╠Ç 55 (roman).ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 48
font_data = ExtResource( 2 )

[node name="ModeSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 60.0
margin_right = -60.0
margin_bottom = -60.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1800.0
margin_bottom = 960.0
custom_constants/separation = 20
alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 543.0
margin_right = 839.0
margin_bottom = 960.0
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 406.0
margin_right = 296.0
margin_bottom = 534.0
custom_fonts/font = SubResource( 1 )
text = "Play!"

[node name="Tagline" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 538.0
margin_right = 296.0
margin_bottom = 554.0
custom_fonts/font = SubResource( 2 )
text = "Mode description here"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 859.0
margin_right = 1207.0
margin_bottom = 960.0
custom_constants/separation = 5
alignment = 1

[node name="TakeYourTime" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 364.0
margin_right = 348.0
margin_bottom = 418.0
custom_fonts/font = SubResource( 3 )
text = "Take your time"

[node name="GoGoGo" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 423.0
margin_right = 348.0
margin_bottom = 477.0
custom_fonts/font = SubResource( 4 )
text = "Go go go"

[node name="DigMode" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 482.0
margin_right = 348.0
margin_bottom = 536.0
custom_fonts/font = SubResource( 5 )
text = "Dig deep"

[node name="Back" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 541.0
margin_right = 348.0
margin_bottom = 595.0
custom_fonts/font = SubResource( 6 )
text = "Back"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 1227.0
margin_right = 1256.0
margin_bottom = 960.0
custom_constants/separation = 13
alignment = 1

[node name="TakeYourTimeArrow" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 364.0
margin_right = 29.0
margin_bottom = 412.0
custom_fonts/font = SubResource( 7 )
text = "<"

[node name="GoGoGoArrow" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 425.0
margin_right = 29.0
margin_bottom = 473.0
custom_fonts/font = SubResource( 8 )

[node name="DigModeArrow" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 486.0
margin_right = 29.0
margin_bottom = 534.0
custom_fonts/font = SubResource( 9 )

[node name="BackArrow" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 547.0
margin_right = 29.0
margin_bottom = 595.0
custom_fonts/font = SubResource( 10 )
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/TakeYourTime" to="." method="_on_TakeYourTime_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/GoGoGo" to="." method="_on_GoGoGo_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/DigMode" to="." method="_on_DigMode_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
